--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurante 3 Amigos</title>
+    <title>Restaurante Disasters</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
@@ -14,33 +14,29 @@
 </head>
 <body>
     <header>
-        <h2 class="titulo">Bem-vindo ao Restaurante 3 Amigos</h2>
         <div class="logo">
-            <img src ="logo.png" alt="Restaurante 3 Amigos" >
+            <img src ="images/logo.png" alt="Restaurante Disasters" >
         </div>
+        <h2 class="titulo">Restaurante Disasters</h2>
         <div class="usuario">
-            <img src="user.png" alt ="Perfil do Funcionário">
+            <img id="user" src="images/user.png" alt ="Perfil do Funcionário">
             <div class="dropdown">
-                <button class="dropbtn"><img src="drop.jpg" alt=""></button>
+                <button class="dropbtn"><img src="images/drop.png" alt=""></button>
                 <div class="dropdown-content">
-                    <a href="#">Configurações<img src ="config.png" alt="Configurações"></a>
-                    <a href="#">Sair <img src ="exit.png" alt="Sair"></a>
+                    <a href="#">Configurações<img src ="images/config.png" alt="Configurações"></a>
+                    <a href="#">Sair <img src ="images/exit.png" alt="Sair"></a>
                 </div> 
             </div>
         </div>
     </header>
-
-
     <main>
-        
-        <p class="conteudo">Selecione uma opção no menu acima para começar:</p>
+        <p class="conteudo">MENU</p>
         <ul>
             <li><a href="calculadora.html">Calculadora de Gorjeta</a></li>
         </ul>
     </main>
-
     <footer>
-        <p>&copy; 2024 Restaurante 3 Amigos</p>
+        <p>&copy; 2024 Restaurante Disasters</p>
     </footer>
 </body>
 </html>
